# Deimos

./: .gitattributes  .gitignore  IMPLEMENTATION_NOTES.md  README.md  contributing.md  documentation.md
benchmarking-suite/frameworks/cairo-m/: Cargo.toml  README.md
benchmarking-suite/frameworks/cairo-m/circuits/: blake2s.cm  blake3.cm  keccak256.cm  mimc.cm  poseidon2.cm  rescue_prime.cm
benchmarking-suite/frameworks/cairo-m/compiled/: cairo_blake2s.json  cairo_blake3.json  cairo_mimc.json  cairo_poseidon2.json  cairo_sha256.json
benchmarking-suite/frameworks/cairo-m/src/: main.rs
benchmarking-suite/moPro/: CIRCOM_INTEGRATION_GUIDE.md  Cargo.toml  Config.toml  rust-toolchain.toml
benchmarking-suite/moPro/cairo-m-prover/: Cargo.toml
benchmarking-suite/moPro/cairo-m-prover/src/: lib.rs
benchmarking-suite/moPro/mopro-circom-multiple/flutter/: pubspec.yaml
benchmarking-suite/moPro/mopro-example-app/: .gitignore  Cargo.toml  Config.toml  build.rs  generate_ios_bindings.sh  update_mopro_circom.sh  update_mopro_noir.sh
benchmarking-suite/moPro/mopro-example-app/MoproAndroidBindings/uniffi/mopro/: mopro.kt
benchmarking-suite/moPro/mopro-example-app/flutter/: INTEGRATION_GUIDE.md  RAM_PROCESSOR_INFO.md  pubspec.yaml
benchmarking-suite/moPro/mopro-example-app/flutter/android/app/: build.gradle
benchmarking-suite/moPro/mopro-example-app/flutter/assets/: cairo_blake2s.json  cairo_input.json  cairo_mimc.json  cairo_sha256.json
benchmarking-suite/moPro/mopro-example-app/flutter/assets/barretenberg/: anemoi_field_1.json  anemoi_field_17.json  anemoi_field_2.json  anemoi_field_3.json  anemoi_field_5.json  anemoi_field_9.json  blake2_bytes_1024.json  blake2_bytes_1028.json  blake2_bytes_128.json  blake2_bytes_16.json  blake2_bytes_256.json  blake2_bytes_32.json  blake2_bytes_512.json  blake2_bytes_64.json  blake3_bytes_1028.json  blake3_bytes_128.json  blake3_bytes_16.json  blake3_bytes_256.json  blake3_bytes_32.json  blake3_bytes_512.json  blake3_bytes_64.json  keccak256_bytes_1024.json  keccak256_bytes_1028.json  keccak256_bytes_128.json  keccak256_bytes_16.json  keccak256_bytes_256.json  keccak256_bytes_32.json  keccak256_bytes_512.json  keccak256_bytes_64.json  mimc_field_1.json  mimc_field_17.json  mimc_field_2.json  mimc_field_3.json  mimc_field_34.json  mimc_field_5.json  mimc_field_9.json  poseidon2_field_1.json  poseidon2_field_2.json  poseidon2_field_5.json  poseidon2_field_9.json  (+21 more)
benchmarking-suite/moPro/mopro-example-app/flutter/assets/cairo-m/: cairo_blake2s.json  cairo_blake3.json  cairo_keccak256.json  cairo_mimc.json  cairo_poseidon2.json  cairo_rescue_prime.json  (+1 more)
benchmarking-suite/moPro/mopro-example-app/flutter/inputs/: cairo_input.json  input_1.json  input_2.json  input_3.json
benchmarking-suite/moPro/mopro-example-app/flutter/integration_test/: plugin_integration_test.dart
benchmarking-suite/moPro/mopro-example-app/flutter/lib/: main.dart
benchmarking-suite/moPro/mopro-example-app/flutter/test/: groth16_test.dart
benchmarking-suite/moPro/mopro-example-app/src/: barretenberg.rs  error.rs  groth16.rs  lib.rs  rapidsnark.rs  stubs.rs
benchmarking-suite/moPro/mopro-example-app/src/configs/: Cargo_circom.toml  Cargo_noir.toml  build_circom.rs  build_noir.rs  lib_barretenberg.rs  lib_circom.rs  lib_groth16.rs  lib_noir.rs
benchmarking-suite/moPro/mopro-example-app/test-vectors/cairo-m/: cairo_sha256.json
benchmarking-suite/moPro/mopro-example-app/test-vectors/circom/: blake2s256_128.wasm  blake2s256_16.wasm  blake2s256_32.wasm  blake2s256_64.wasm  blake3.wasm  blake3_128.wasm  blake3_16.wasm  blake3_32.wasm  blake3_64.wasm  keccak256_128.wasm  keccak256_16.wasm  keccak256_32.wasm  keccak256_64.wasm  mimc256_128f.wasm  mimc256_16f.wasm  mimc256_17f.wasm  mimc256_1f.wasm  mimc256_2f.wasm  mimc256_34f.wasm  mimc256_3f.wasm  mimc256_5f.wasm  mimc256_64f.wasm  mimc256_9f.wasm  pedersen.h  pedersen_128.wasm  pedersen_16.wasm  pedersen_32.wasm  pedersen_64.wasm  poseidon2_17f.wasm  poseidon2_1f.wasm  poseidon2_2f.wasm  poseidon2_34f.wasm  poseidon2_3f.wasm  poseidon2_5f.wasm  poseidon2_9f.wasm  poseidon_128f.wasm  poseidon_1f.wasm  poseidon_2f.wasm  poseidon_32f.wasm  poseidon_3f.wasm  (+16 more)
benchmarking-suite/moPro/mopro-example-app/tests/: barretenberg.rs  groth16.rs
benchmarking-suite/moPro/mopro-keccack256/: Cargo.toml
benchmarking-suite/moPro/mopro-keccack256/flutter/assets/: circom.zkey
benchmarking-suite/moPro/mopro-keccack256/flutter/lib/: main.dart
benchmarking-suite/moPro/mopro-keccack256/src/: lib.rs
benchmarking-suite/moPro/mopro-mimc/flutter/assets/: multiplier2_bls_final.zkey
benchmarking-suite/moPro/mopro-poseidon/: Cargo.toml  DEBUG_GUIDE.md  proof.json
benchmarking-suite/moPro/mopro-poseidon/src/: lib.rs
benchmarking-suite/moPro/mopro-sha256/: Config.toml
benchmarking-suite/moPro/provekit-prover/: Cargo.toml
benchmarking-suite/moPro/provekit-prover/src/: lib.rs
benchmarking-suite/moPro/provekit-wrapper/: Cargo.toml  gen_tests.py  generate_vectors.sh
benchmarking-suite/moPro/provekit-wrapper/src/: lib.rs
benchmarking-suite/moPro/provekit-wrapper/test_vectors/: anemoi_field_1.pkp  anemoi_field_1.pkv  anemoi_field_2.pkp  anemoi_field_2.pkv  anemoi_field_3.pkv  anemoi_field_34.pkv  anemoi_field_5.pkp  anemoi_field_9.pkp  anemoi_field_9.pkv  mimc_field_17.pkv  mimc_field_2.pkp  mimc_field_2.pkv  mimc_field_3.pkp  mimc_field_5.pkp  mimc_field_5.pkv  mimc_field_9.pkp  poseidon_field_1.pkv  poseidon_field_17.pkp  poseidon_field_17.pkv  poseidon_field_2.pkp  poseidon_field_2.pkv  poseidon_field_5.pkp  poseidon_field_5.pkv  rescue_prime_field_17.pkp  rescue_prime_field_17.pkv  rescue_prime_field_2.pkp  rescue_prime_field_2.pkv  rescue_prime_field_3.pkp  rescue_prime_field_3.pkv  rescue_prime_field_34.pkp  rescue_prime_field_34.pkv  rescue_prime_field_5.pkp  rescue_prime_field_5.pkv  rescue_prime_field_9.pkp  rescue_prime_field_9.pkv  sha256_bytes_128.pkp  sha256_bytes_128.pkv  sha256_bytes_16.pkp  sha256_bytes_16.pkv  sha256_bytes_256.pkv  (+5 more)
benchmarking-suite/moPro/provekit-wrapper/tests/: test_prove_verify.rs
(+539 files in other folders)
