[workspace]
resolver = "2"
members = ["risc0-circuit", "mopro-example-app"]
exclude = ["risc0-circuit/guest"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
risc0-circuit = { path = "./risc0-circuit" }
risc0-build = { version = "3.0.3" }
risc0-zkvm = { version = "3.0.3", default-features = false }
cairo-m-prover = { path = "./cairo-m-prover" }

[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

# Patch zkhash to use the fork with M31 field support (same as cairo-m)
[patch."https://github.com/HorizenLabs/poseidon2.git"]
zkhash = { git = "https://github.com/AntoineFONDEUR/poseidon2.git", branch = "poseidon2-M31" }
