[workspace]
resolver = "2"
members = ["risc0-circuit", "mopro-example-app"]
exclude = ["risc0-circuit/guest", "provekit-wrapper"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
risc0-circuit = { path = "./risc0-circuit" }
risc0-build = { version = "3.0.3" }
risc0-zkvm = { version = "3.0.3", default-features = false }
cairo-m-prover = { path = "./cairo-m-prover" }


[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

# Patch cairo-m git deps to use the local clone
[patch."https://github.com/x-senpai-x/cairo-m"]
cairo-m-runner = { path = "../../../cairo-m/crates/runner" }
cairo-m-prover = { path = "../../../cairo-m/crates/prover" }
cairo-m-common = { path = "../../../cairo-m/crates/common" }

# Patch stwo to use the local submodule inside cairo-m (same rev)
[patch."https://github.com/starkware-libs/stwo"]
stwo-prover = { path = "../../../cairo-m/external/stwo/crates/prover" }

# Patch zkhash to use the fork with M31 field support (same as cairo-m)
[patch."https://github.com/HorizenLabs/poseidon2.git"]
zkhash = { git = "https://github.com/AntoineFONDEUR/poseidon2.git", branch = "poseidon2-M31" }
