
[package]
name = "mopro-example-app"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["cairo", "noir"]
cairo = ["dep:cairo-m-prover"]
noir = ["dep:noir_rs"]

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git", branch = "v0.2.x" }
mopro-ffi = { version = "0.3.1", features = ["uniffi"] }
thiserror = "2.0.12"
anyhow = "1.0.99"
bincode = "1.3"


# RISC0
risc0-zkvm = { workspace = true, features = ["prove", "metal", "unstable"] }
methods = { path = "../risc0-circuit/methods" }
cairo-m-prover = { path = "../cairo-m-prover", optional = true }


# ==============================================================================
# CIRCOM DEPENDENCIES
# ==============================================================================
circom-prover = "0.1"
rust-witness = "0.1"
num-bigint = "0.4.0"

# HALO2_DEPENDENCIES

plonk-fibonacci = { package = "plonk-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git" }
hyperplonk-fibonacci = { package = "hyperplonk-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git" }
gemini-fibonacci = { package = "gemini-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git" }

# NOIR_DEPENDENCIES

# ==============================================================================
# NOIR DEPENDENCIES
# ==============================================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"

noir_rs = { package = "noir", git = "https://github.com/zkmopro/noir-rs", features = [
    "barretenberg",
    "android-compat",
], branch = "v1.0.0-beta.8-3", optional = true }



[build-dependencies]
# ==============================================================================
# CIRCOM BUILD DEPENDENCIES
# ==============================================================================
witnesscalc-adapter = "0.1"
rust-witness = "0.1"
cc = "1.0"

# HALO2_BUILD_DEPENDENCIES

# ==============================================================================
# HALO2 BUILD DEPENDENCIES
# ==============================================================================

# ==============================================================================
# NOIR BUILD DEPENDENCIES
# ==============================================================================


[dev-dependencies]
mopro-ffi = { version = "0.3.1", features = ["uniffi-tests"] }

# ==============================================================================
# CIRCOM DEV DEPENDENCIES
# ==============================================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"

# HALO2_DEV_DEPENDENCIES

# ==============================================================================
# HALO2 DEV DEPENDENCIES
# ==============================================================================

# ==============================================================================
# NOIR DEV DEPENDENCIES
# ==============================================================================
serial_test = "3.0.0"
