
[package]
name = "mopro-example-app"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["groth16", "cairo_m", "barretenberg", "provekit"]
groth16 = ["dep:circom-prover", "circom-prover/rapidsnark", "dep:rust-witness", "dep:num-bigint", "dep:rust-rapidsnark"]
cairo_m = ["dep:cairo-m-prover"]
barretenberg = ["dep:noir_rs"]
provekit = ["dep:provekit-wrapper"]

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git", branch = "v0.2.x" }
mopro-ffi = { version = "0.3.1", features = ["uniffi"] }
thiserror = "2.0.12"
anyhow = "1.0.99"
bincode = "1.3"


# RISC0
risc0-zkvm = { workspace = true, features = ["prove", "metal", "unstable"] }
methods = { path = "../risc0-circuit/methods" }
cairo-m-prover = { path = "../cairo-m-prover", optional = true }
provekit-wrapper = { path = "../provekit-wrapper", optional = true }


# ==============================================================================
# GROTH16 (CIRCOM) DEPENDENCIES
# ==============================================================================
circom-prover = { version = "0.1", optional = true }
rust-witness = { version = "0.1", optional = true }
num-bigint = { version = "0.4.0", optional = true }
rust-rapidsnark = { version = "0.1", optional = true }

# ==============================================================================
# BARRETENBERG (NOIR) DEPENDENCIES
# ==============================================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"

noir_rs = { package = "noir", git = "https://github.com/zkmopro/noir-rs", features = [
    "barretenberg",
    "android-compat",
], branch = "v1.0.0-beta.8-3", optional = true }


[build-dependencies]
# ==============================================================================
# GROTH16 (CIRCOM) BUILD DEPENDENCIES
# ==============================================================================
witnesscalc-adapter = { version = "0.1", optional = true }
rust-witness = { version = "0.1", optional = true }
cc = "1.0"
rust-rapidsnark = { version = "0.1", optional = true }

# ==============================================================================
# BARRETENBERG (NOIR) BUILD DEPENDENCIES
# ==============================================================================


[dev-dependencies]
mopro-ffi = { version = "0.3.1", features = ["uniffi-tests"] }

# ==============================================================================
# GROTH16 (CIRCOM) DEV DEPENDENCIES
# ==============================================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"

# ==============================================================================
# BARRETENBERG (NOIR) DEV DEPENDENCIES
# ==============================================================================
serial_test = "3.0.0"
