[package]
name = "provekit-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"

# ProveKit local dependencies
provekit-common = { path = "../provekit/provekit/common" }
provekit-prover = { path = "../provekit/provekit/prover" }
provekit-verifier = { path = "../provekit/provekit/verifier" }
