[package]
name = "provekit-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"
postcard = { version = "1.1.1", features = ["use-std"] }

# ProveKit git dependencies
provekit-common = { git = "https://github.com/worldfnd/provekit.git", rev = "e2c5ea3e780afc1d4f0838e55adcd1e5b8cbfbf3" }
provekit-core-prover = { git = "https://github.com/worldfnd/provekit.git", rev = "e2c5ea3e780afc1d4f0838e55adcd1e5b8cbfbf3", package = "provekit-prover" }
provekit-verifier = { git = "https://github.com/worldfnd/provekit.git", rev = "e2c5ea3e780afc1d4f0838e55adcd1e5b8cbfbf3" }

[workspace]
resolver = "2"
members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Remco Bloemen <remco@world.org>", "Philipp Sippl <philipp@world.org>", "Yuval Domb", "Xander van der Goot", "Koh Wei Jie", "Tony Wu", "Vishruti Ganesh", "Benjamin Wilson", "Yogesh Swami", "Ryan Cao", "Shreyas Londhe", "Aditya Bisht"]
license = "MIT"
homepage = "https://github.com/worldfnd/ProveKit"
repository = "https://github.com/worldfnd/ProveKit"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
cargo = "warn"
perf = "warn"
complexity = "warn"
style = "warn"
correctness = "warn"
suspicious = "warn"
cargo_common_metadata = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
missing_docs_in_private_items = { level = "allow", priority = 1 }
missing_safety_doc = { level = "deny", priority = 1 }
